--- a/system-parachains/asset-hubs/asset-hub-polkadot/Cargo.toml
+++ b/system-parachains/asset-hubs/asset-hub-polkadot/Cargo.toml
@@ -35,7 +35,7 @@ pallet-asset-tx-payment = { default-features = false , version = "25.0.0" }
 pallet-assets = { default-features = false, version = "26.0.0" }
 pallet-aura = { default-features = false, version = "24.0.0" }
 pallet-authorship = { default-features = false, version = "25.0.0" }
-pallet-balances = { default-features = false, version = "25.0.0" }
+pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
 pallet-multisig = { default-features = false, version = "25.0.0" }
 pallet-nfts = { default-features = false, version = "19.0.0" }
 pallet-nfts-runtime-api = { default-features = false, version = "11.0.0" }
