replace pallet balances

--- a/system-parachains/asset-hubs/asset-hub-kusama/Cargo.toml
+++ b/system-parachains/asset-hubs/asset-hub-kusama/Cargo.toml
@@ -28,7 +28,7 @@ pallet-assets = { default-features = false, version = "24.0.0" }
 pallet-asset-conversion = { default-features = false, version = "5.0.0" }
 pallet-aura = { default-features = false, version = "22.0.0" }
 pallet-authorship = { default-features = false, version = "23.0.0" }
-pallet-balances = { default-features = false, version = "23.0.0" }
+pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
 pallet-multisig = { default-features = false, version = "23.0.0" }
 pallet-nft-fractionalization = { default-features = false, version = "5.0.0" }
 pallet-nfts = { default-features = false, version = "17.0.0" }
