--- a/relay/kusama/Cargo.toml
+++ b/relay/kusama/Cargo.toml
@@ -46,7 +46,7 @@ pallet-authority-discovery = { default-features = false , version = "23.0.0" }
 pallet-authorship = { default-features = false , version = "23.0.0" }
 pallet-babe = { default-features = false , version = "23.0.0" }
 pallet-bags-list = { default-features = false , version = "22.0.0" }
-pallet-balances = { default-features = false , version = "23.0.0" }
+pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
 pallet-beefy = { default-features = false , version = "23.0.0" }
 pallet-beefy-mmr = { default-features = false , version = "23.0.0" }
 pallet-bounties = { default-features = false , version = "22.0.0" }
